--- a/gb/23/7/31/n14045438.md
+++ b/gb/23/7/31/n14045438.md
@@ -1,62 +1,53 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>连续13年增长 洛杉矶县房产估值近2万亿美元</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>洛杉矶县房产估值近2万亿美元 连增13年</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/10/id13844918-GettyImages-1243437663-600x400.jpg" />
 <h6>图为2022年9月22日，洛杉矶的一处待售房屋。(Allison Dinner/Getty Images)
 </h6>
 <hr>
 	<p>【大纪元2023年08月01日讯】（大纪元记者姜琳达编译报导）过去一年，尽管加州房市充满波动和不确定性，但<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6%E5%8E%BF.md#1">洛杉矶县</a>的表现依旧亮眼：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E4%BA%A7%E8%AF%84%E4%BC%B0%E4%BB%B7.md#1">房产评估价</a>值连续13年增长，总净值接近2万亿美元。</p>
-<p>每年，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6%E5%8E%BF.md#1">洛杉矶县</a>都会根据州宪法的要求，对县内所有需要缴税的物业进行新一轮的价值评估，评估结果会收录到“估值册”（Assessment Roll）中。这份“估值册”便于民众和投资者深入了解各个城市的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7%E5%B8%82%E5%9C%BA.md#1">房地产市场</a>及经济状况。</p>
+<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6%E5%8E%BF.md#1">洛杉矶县</a>每年都会根据州宪法的要求，对县内所有需要缴税的物业进行新一轮的价值评估，评估结果会收录到“估值册”（Assessment Roll）中。这份“估值册”便于民众和投资者深入了解各个城市的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7%E5%B8%82%E5%9C%BA.md#1">房地产市场</a>及经济状况。</p>
 <p>洛县估值官潘杰夫（Jeffrey Prang）表示，2023年洛县房产总净值达到创纪录的1.997万亿美元，与去年相比增长了5.91%，由此产生的约200亿美元房产税，将用于资助公共教育、急救人员、医疗保健人员，以及县内的其它公共服务。</p>
-<p>新“估值册”反映了2023年1月1日时的房产总净值。多个原因促使洛县<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E4%BA%A7%E4%BC%B0%E5%80%BC.md#1">房产估值</a>突破新高。</p>
+<p>新“估值册”反映了2023年1月1日时的房产总净值。多个原因促使洛县<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E4%BA%A7%E4%BC%B0%E5%80%BC.md#1">房产估值</a>创下新高。</p>
 <p>首先，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7%E5%B8%82%E5%9C%BA.md#1">房地产市场</a>与2021年相比虽大幅降温，但中位数房价一度达到超过90万美元的历史新高。2022年前三季度独立屋市场持续强劲，致使房产在买卖过程中的估值大幅增加，为洛县总估值新增了674亿美元。不过在刚刚过去的6月份，中位数房价跌至86.5万美元。</p>
 <p>第13号法案（Proposition 13）规定的通货膨胀调整，是造成估值增长的第二大重要因素。由于加州消费者价格指数（简称CPI）的走势远远超出了2%的稳定值范围，使2023年洛县总估值增加了367亿美元。</p>
 <p>除此之外，新建建筑物为估值增长增加了56亿美元；个人财产和不动产的估值也超出预期，为估值增长添加了104亿美元。</p>
 <p>2023年“估值册”所涵盖的范围包括近240万个应税不动产地块、200,969个商业地产评估、33,871艘船只和2,952架飞机。随着消费者重返市场，近年来受影响的航空航天、电影和零售等行业市场，去年出现了强劲增长。</p>
 <p>潘杰夫说：“根据分析表明，目前的房地产价值确实在增长，这对于业主和地方政府来说无疑是个好消息，因为政府依靠房产税来资助公共服务。”</p>
-<p>但他也感受到房市所面临的挑战：“2022年年底的房地产市场不如年初时表现稳健，因此，房市疲软的情况很有可能持续到明年。”◇</p>
+<p>但他也感受到房市所面临的挑战：“2022年年底的房地产市场不如年初时表现稳健，因此，房市疲软的情况很有可能持续到明年。”◇＃</p>
 <p>责任编辑：嘉莲</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/8/n13561965.md#1">通货膨胀下地税也涨价？洛县估值官作解释</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/1/n13836571.md#1">美地产经纪人：现在买卖双方都感觉被困住</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/22/n13850663.md#1">预制房屋为何不能降低加州的住房价格</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/20/n14019408.md#1">洛杉矶库存房大幅减少 好房仍须加价买</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513937.md#1" target="_blank">摧毁传统乡绅制与现代法治基础的痞子运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245419.md#1" target="_blank">长夜尽头 一缕金色的彩霞</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/17/n11118849.md#1" target="_blank">严家伟：极权专制对中国新闻界的一次严厉打压</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/13/n7893575.md#1" target="_blank">专家看万人游行：法轮功在世界舞台令人注目</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042367.md#1">港作家叹大陆出不了这三人 最欣赏倪匡气节</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040949.md#1">【未解之谜】特异功能大师 李有甫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14035789.md#1">南希?里根的最佳角色（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14038991.md#1">中国哲学思想的智慧：虚室生白 吉祥自来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043385.md#1">【未解之谜】J-Rod秘密基地的外星顾问</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044635.md#1">【时事军事】中共为俄开后门 居心不在援俄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044301.md#1">【菁英论坛】解读2758决议 美夺回一中话语权</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045185.md#1">【新闻大家谈】内溃外患 习治军剩一招？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044167.md#1">中美对抗之下美国签证与移民的变数（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043888.md#1">【菁英论坛】北京上海同出大事 中共气数将尽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044059.md#1">栗战书之女任香港太平绅士 几度卷入负面传闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044708.md#1">《中国好声音》开播2分钟 网民吐槽 评论关闭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044530.md#1">杨紫琼认嫁富商尚?陶德 甜晒合照分享喜讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044675.md#1">周润发跑步不慎摔倒 自曝肋骨断裂呼吸都会痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044580.md#1">李玟告别式7/31举行 丈夫不在讣闻名单中</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043840.md#1">因病三度暂停演唱会 容祖儿：每天忐忑不安</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040401.md#1">为何午餐后昏昏欲睡？试试这5个醒脑技巧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/9/n14031083.md#1">薄荷治头痛、恶心、便秘 效果媲美5种常用药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043848.md#1">浴室霉菌易诱发过敏 做到5点彻底除霉菌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040934.md#1">西方人也在积极尝试 你所不知道的7个针灸妙用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14043914.md#1">【车评】电星星亮晶晶 2023 Mercedes-Benz EQS 580 4MATIC SUV</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/31/n14045438.htm">连续13年增长 洛杉矶县房产估值近2万亿美元</a></p><hr>
-
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/31/n14045438.htm">洛杉矶县房产估值近2万亿美元 连增13年</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045438.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
