--- a/gb/23/8/16/n14054784.md
+++ b/gb/23/8/16/n14054784.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>大保险公司退市 加州人陷难买保险困境</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>保险公司退出加州市场 消费者面临断保风险</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14054786-AdobeStock_87172222-1600x1600-1-600x400.jpg" />
 <h6>进入2023年，加州人陷入一个困境——保险公司纷纷撤离加州或限制新保单数量。（Fotolia）
 </h6>
 <hr>
-	<p>【大纪元2023年08月16日讯】（大纪元记者姜琳达洛杉矶报导）无论是买车还是买房，消费者都需要<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B4%AD%E4%B9%B0%E4%BF%9D%E9%99%A9.md#1">购买保险</a>来保护自己的财产。然而进入2023年，加州人陷入一个困境——<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9%E5%85%AC%E5%8F%B8.md#1">保险公司</a>纷纷<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%92%A4%E7%A6%BB%E5%8A%A0%E5%B7%9E.md#1">撤离加州</a>或限制新保单数量。</p>
+	<p>【大纪元2023年08月16日讯】（大纪元记者姜琳达洛杉矶报导）无论是买车还是买房，消费者都需要<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B4%AD%E4%B9%B0%E4%BF%9D%E9%99%A9.md#1">购买保险</a>来保护自己的财产。然而进入2023年，加州人陷入一个困境——<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9%E5%85%AC%E5%8F%B8.md#1">保险公司</a>纷纷撤离加州或限制新保单数量。</p>
 <p>洛杉矶一位有着20年经验的华人保险经纪人艾瑞克表示，很多汽车<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BF%9D%E9%99%A9%E5%85%AC%E5%8F%B8.md#1">保险公司</a>今年都修改了政策，例如有的保险公司不再提供一年期限的保单，最长时间仅为半年；还有的保险公司几乎不为客人提供新保单。</p>
 <p>“这应该是我从业以来，第一次遇到很多人买不到保险的情况。之前已有保险的客人都发现今年的保费多多少少涨价了。”他表示，加州政府过度干涉保险行业、监管失调以及对盗窃财产者的纵容政策等等原因，逼迫保险公司逃离加州市场。</p>
 <p>“政客有些政策感觉是为了消费者着想，但赶走了保险公司，最后倒楣的还是消费者。”他说，“现在有<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%BD%E8%BD%A6%E4%BF%9D%E9%99%A9.md#1">汽车保险</a>，或还买得到保险的算幸运了。而且保险公司现在审查新保单的时间变得非常长，有的时候需要一个月的时间。”</p>
-<p>然而保险经纪人及消费者的噩梦远不止于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%BD%E8%BD%A6%E4%BF%9D%E9%99%A9.md#1">汽车保险</a>，房屋保险公司也宣布退出加州市场。</p>
+<p>然而保险经纪人及消费者的噩梦远不止于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B1%BD%E8%BD%A6%E4%BF%9D%E9%99%A9.md#1">汽车保险</a>，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E5%B1%8B%E4%BF%9D%E9%99%A9.md#1">房屋保险</a>公司也宣布退出加州市场。</p>
 <h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E%E6%B3%95%E8%A7%84.md#1">加州法规</a>迫使知名保险公司退市</h2>
 <p>尽管加州是美国人口最多的州，但随着通货膨胀压力和野火风险的增加，State Farm和Allstate两家知名保险公司宣布，停止接受加州商业和个人物业险及意外伤害保险的新申请。加州第二大保险商Farmers Insurance也宣布，从7月3日开始，限制新保单数量。</p>
 <p>State Farm在5月发布的声明中表示，之所以做出这一决定，是因为“建筑成本的历史性增长超过了通货膨胀，灾难风险迅速增大，以及再保险市场充满挑战”。“再保险市场”是保险公司用来限制风险而为自己购买的保险。</p>
@@ -24,49 +24,40 @@
 <h2>保险业如何影响经济</h2>
 <p>赫巴德在接受采访时还指出，保险的最大好处之一是让人拥有安全网，保护所投资的资产。倘若保险公司停止出售保险，可能会影响经济：人们可能不会购买房产，依赖保险的承包商将无法建造房屋，货运行业的人也无法在没有承保的情况下运输产品。</p>
 <p>“这可能会导致我们的经济崩溃。”她说，届时在加州买不到保险的消费者，可能要花更多钱从州外公司<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B4%AD%E4%B9%B0%E4%BF%9D%E9%99%A9.md#1">购买保险</a>。</p>
-<p>她认为，政府必须要对目前加州的保险业危机采取行动，双方都需要作出一些让步，“否则我们的经济就不会繁荣”。◇</p>
+<p>她认为，政府必须要对目前加州的保险业危机采取行动，双方都需要作出一些让步，“否则我们的经济就不会繁荣”。◇#</p>
 <p><em>英文大纪元记者Sophie Li和Siyamak Khorrami对此文有贡献。</em></p>
 <p>责任编辑：方平</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949734.md#1">加州起诉杭廷顿海滩市 迫其大建经济房</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018089.md#1">18家保险公司申请涨车保费 最高涨6成</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/28/n14023992.md#1">加州仓库遭游民闯入起火 百万损失谁买单？</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034760.md#1">又一家房屋保险公司  削减加州业务</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/2/n11020634.md#1" target="_blank">林辉：与张大千比肩的画坛宗师饮恨而终</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/11/n10903516.md#1" target="_blank">观雨堂主：一位历史学家在生命终点的“争宠”</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/1/n11424188.md#1" target="_blank">前加拿大世姐：我是如何改变对法轮功看法</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052368.md#1">聊斋?山歌罗刹海市 隐喻之弹激起千层浪 马户又鸟知是谁？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049548.md#1">【未解之谜】神通第一的莲花色</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14051960.md#1">【未解之谜】探秘中国第一神山</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047740.md#1">【古道人生】皇帝因何震怒而将少年科甲的县令处决？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049226.md#1">南希?里根的最佳角色（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/11/n14052539.md#1">【百年真相】中共官场 贪出五大怪象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/12/n14052900.md#1">【环球直击】高智晟失踪六年 民运人士华府营救</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054528.md#1">【新闻大破解】中共是定时炸弹 美拆弹有新招？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053392.md#1">习近平不去灾区 党媒连发文被指高级黑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053440.md#1">河北军政官员洪灾中坠机死消息被封 疑云未散</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053644.md#1">分析：中国正走向十年经济停滞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053268.md#1">张学友大马演唱会爆意外 唱到一半在台上跌倒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053912.md#1">医嘱暂停运动2个月 周润发疑偷偷跑步显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053341.md#1">昆凌30岁生日 周杰伦逗趣称呼秀恩爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053977.md#1">喊昆凌“三宝妈”遭陆民曲解 周杰伦幽默回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053034.md#1">瑞玛席丹出演《狂怒沙暴》 以武打片进军好莱坞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053126.md#1">如何清理浴室里的莲蓬头？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048306.md#1">早期发现糖尿病的“蛛丝马迹” 防治有一关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044382.md#1">简单肩部训练 帮你缓解肩部不适</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048340.md#1">6招必学控糖法 中医控制糖尿病全攻略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/13/n14053260.md#1">洁肤神器──魔芋海绵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/16/n14054784.htm">大保险公司退市 加州人陷难买保险困境</a></p><hr>
-
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/16/n14054784.htm">保险公司退出加州市场 消费者面临断保风险</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/16/n14054784.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
